--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-coming soon...
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>BAH</title>
+    <style>
+        body {
+            background-color: blue; /* Adds a blue background */
+        }
+    </style>
+</head>
+<body>
+    <p>coming soon...</p>
+</body>
+</html>
