--- a/index.html
+++ b/index.html
@@ -1,16 +1,49 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BAH</title>
+    <title>BAH - Bang Allergic Hair</title>
     <style>
         body {
-            background-color: blue; /* Adds a blue background */
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f0f8ff; /* Light blue background */
+            color: #333; /* Dark text for readability */
+        }
+        header {
+            background-color: #4CAF50; /* Green header */
+            color: white;
+            padding: 1rem;
+            text-align: center;
+        }
+        main {
+            padding: 2rem;
+            text-align: center;
+        }
+        footer {
+            background-color: #4CAF50;
+            color: white;
+            text-align: center;
+            padding: 1rem;
+            position: fixed;
+            bottom: 0;
+            width: 100%;
         }
     </style>
 </head>
 <body>
-    <h1>coming soon...</h1>
+    <header>
+        <h1>Welcome to BAH - Bang Allergic Hair</h1>
+    </header>
+    <main>
+        <p>Your ultimate destination for hair care and styling solutions.</p>
+        <p>Explore our range of products and tips to embrace your unique style.</p>
+    </main>
+    <footer>
+        <p>&copy; 2025 Bang Allergic Hair. All rights reserved.</p>
+    </footer>
 </body>
 </html>
